# czech_tts

./: .gitignore  README.md  data.nb.py  pyproject.toml
src/czech_tts/: loader.py  pitch.py
