[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "czech_tts"
version = "0.0.0"
authors = [{name = "David Burian", email = "david.burian@me.com"}]
dependencies = [
  "torch",
  "torchaudio",
  "pandas",
  "seaborn",
  "numpy",
  "matplotlib",
  "tqdm",
  "jupytext",
  "jupyterlab",
  "praatio",
  "librosa",
]



[tool.jupytext]
formats = "ipynb,py:percent"
